fix-start-page-horizontal-overflow

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -19,6 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .app__div {
